--- a/templates/page.html
+++ b/templates/page.html
@@ -48,8 +48,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="login"
                 >login</a
-              >
-            </li>
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="Signup">Signup</a>
+              </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
